comment section small fix layout mediaqueries

--- a/wp-content/themes/marie/layouts/content-sidebar.css
+++ b/wp-content/themes/marie/layouts/content-sidebar.css
@@ -64,5 +64,9 @@ Layout: Content-Sidebar
     #content {
         padding: 0 1em;
     }
+
+    #main {
+        width: 100%;
+    }
 }
 
